[package]
name = "gherkin-cargo-test"
version = "0.6.0"
edition = "2021"
rust-version = "1.85"
readme = "README.md"
description = "The smallest honest Gherkin runner and feature-file linter for Rust — two boring dependencies, on cargo test via libtest-mimic, built for agent-driven BDD."
license = "MIT"
authors = ["Bing Ho <reps-attic-riot@duck.com>"]
repository = "https://github.com/bingh0/gherkin-cargo-test"
# The differential parity harness is JS driving both siblings from the repo;
# it has no business inside the crate tarball. CI config likewise.
exclude = ["tools/", ".github/"]
keywords = ["gherkin", "bdd", "cucumber", "linter", "agent"]
categories = ["development-tools::testing"]

[dependencies]
regex = "1"
libtest-mimic = "0.8"

# The crate's own acceptance layer: real .feature files run through the runner.
[[test]]
name = "features"
harness = false

# Executed proof of every runner guard: builds trials from fixture feature
# dirs, runs them through libtest-mimic in-process, asserts the Conclusion.
[[test]]
name = "guards-proof"
harness = false
